@@ -13,6 +13,10 @@ public class NapkinSplitPaneUI extends BasicSplitPaneUI {
         return NapkinUtil.uiFor(c, new NapkinSplitPaneUI());
     }
 
+    public BasicSplitPaneDivider createDefaultDivider() {
+        return new NapkinSplitPaneDivider(this);
+    }
+
     public void installUI(JComponent c) {
         NapkinUtil.installUI(c);
         super.installUI(c);
@@ -26,6 +30,12 @@ public class NapkinSplitPaneUI extends BasicSplitPaneUI {
     public void update(Graphics g, JComponent c) {
         NapkinUtil.background(g, c);
         super.update(g, c);
+    }
+
+    protected void resetLayoutManager() {
+        super.resetLayoutManager();
+        int orientation = splitPane.getOrientation();
+        ((NapkinSplitPaneDivider) divider).setOrientation(orientation);
     }
 }
 
