@@ -9,6 +9,7 @@
 
 <ul>
 <li> Indeterminate progress bar.
+<li> Split panes.
 </ul>
 
 <h4>alpha-004, 15 May 2004</h4>
